# dsa-solver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
benchmarks/: README.md  corpus.csv
benchmarks/architectures/: ascend910b-v1.json  ascend950-v1.json
benchmarks/capture/: pypto-adapter-gates-8df2ed4.tsv
benchmarks/minimalloc-dsa-rp/: A.json  B.json  C.json  D.json  E.json  F.json  G.json  H.json  I.json  J.json  K.json
benchmarks/pypto/: README.md  capacity_gated_pipeline_cost_v1.json  chain_read_before_write_v1.json  issue_1908_fragmentation_v1.json  pipeline_stage_separation_v1.json  target_hazard_v1.json
benchmarks/pypto-lib/: README.md
benchmarks/pypto-lib/examples/: beginner__matmul__pypto_matmul_tile.json
benchmarks/pypto-lib/examples/advanced/: allreduce__pypto_reduce_step.json  multi_proj__pypto_proj.json  topk__pypto_topk_block.json
benchmarks/pypto-lib/examples/advanced/gemm_eltwise/: pypto_gemm_eltwise_tile_aic.json  pypto_gemm_eltwise_tile_aiv.json
benchmarks/pypto-lib/examples/advanced/topk/: pypto_topk_block-cross-pipe-hard.json  pypto_topk_block-cross-pipe-soft.json
benchmarks/pypto-lib/models/deepseek/v4/: decode_sparse_attn_swa__pypto_swa_valid_bias.json  prefill_compressor_ratio4__pypto_prefill_c4_softmax_pool.json
benchmarks/pypto-lib/models/qwen3/14b/: greedy_sample__pypto_greedy_sample.json
benchmarks/pypto/host-captured/pypto-lib-6e897cd/: coverage.tsv  manifest.tsv
benchmarks/pypto/host-captured/pypto-st-8df2ed4/: coverage.tsv  manifest.tsv
benchmarks/pypto/real/deepseek-v4-lifetime-hull-8438a916/: coverage.tsv  manifest.tsv
benchmarks/pypto/system-tests/examples/: 01_beginner__basic__test_basic_ops__pypto_fused_add_scale_incore_0.json
benchmarks/pypto/system-tests/examples/02_intermediate/: test_activation__pypto_silu_incore_0.json  test_layer_norm__pypto_layer_norm_incore_0.json  test_rms_norm__pypto_rms_norm_incore_0.json  test_softmax__pypto_tile_softmax_incore_0.json
benchmarks/pypto/system-tests/runtime/: test_fused_matmul_scatter__pypto_fused_incore_0_aic.json
benchmarks/pypto/targets/: deepseek_v4_lifetime_hull_8438a916.tsv  pypto_b8802dc6.tsv  pypto_lib_6e897cd.tsv  pypto_lib_bf89431.tsv  pypto_st_8df2ed4.tsv
benchmarks/pypto/unit-tests/memory-planning/: capacity_gated_pipeline_cost_v1.json  chain_read_before_write_v1.json  issue_1908_fragmentation_v1.json  pipeline_stage_separation_v1.json  target_hazard_v1.json
benchmarks/results/: README.md
benchmarks/results/baseline/: report.md  results.jsonl  summary.csv
benchmarks/results/complete-v1/: features.csv  report.md  results.jsonl  summary.csv
benchmarks/results/dsa-rp-v1/: algorithm-comparison.csv  features.csv  paired-objectives.csv  report.md  summary.csv
benchmarks/results/host-corpus-v1/: features.csv  report.md  summary.csv
benchmarks/results/minimalloc-1mib-xla/: report.md  results.jsonl  summary.csv
benchmarks/results/minimalloc-dsa-rp-v1/: features.csv  report.md  results.jsonl  summary.csv
benchmarks/results/standard-v1/: report.md  summary.csv
benchmarks/standard/: README.md  freed_region_subdivision_v1.json
cmake/: dsa-solver-config.cmake.in
docs/: README.md  architecture_binding.md  compiler_corpus.md  cypress_relaxation.md  design.md  device_cost_experiments.md  dsa_rp_algorithms.md  dsa_rp_constructive_baselines.md  full_corpus_capture.md  literature_review.md  pypto_dsa.md  pypto_hard_v1.md  pypto_structured_problem_design.md  structured_problem_schema_v1.md  tvm_hill_climb.md  xla_heap.md
include/dsa/: first_fit_solver.h  local_search_solver.h  minimalloc_csv.h  model.h  pypto_structured_search_solver.h  solver.h  structured_problem.h  tvm_hill_climb_solver.h  validator.h  xla_heap_solver.h
schemas/: dsa-architecture-v1.schema.json  dsa-problem-v1.schema.json  dsa-solution-v1.schema.json
src/: first_fit_solver.cpp  local_search_solver.cpp  minimalloc_csv.cpp  model.cpp  placement_engine.cpp  pypto_structured_search_solver.cpp  solver.cpp  structured_json.cpp  structured_problem.cpp  tvm_hill_climb_solver.cpp  validator.cpp  xla_heap_solver.cpp
src/detail/: placement_engine.h
src/dsa/algorithms/: canonical_exact_search.cpp  canonical_exact_search.h  cypress_relaxation_solver.cpp  cypress_relaxation_solver.h  first_fit_solver.cpp  first_fit_solver.h  local_search_solver.cpp  local_search_solver.h  placement_engine.cpp  placement_engine.h  pypto_structured_search_solver.cpp  pypto_structured_search_solver.h  reuse_penalty_baseline_solvers.cpp  reuse_penalty_baseline_solvers.h  reuse_penalty_exact_solvers.cpp  reuse_penalty_exact_solvers.h  reuse_penalty_local_search_solver.cpp  reuse_penalty_local_search_solver.h  reuse_penalty_portfolio_solvers.cpp  reuse_penalty_portfolio_solvers.h  reuse_penalty_scale_solver.cpp  reuse_penalty_scale_solver.h  reuse_penalty_search.cpp  reuse_penalty_search.h  reuse_penalty_treewidth_solver.cpp  reuse_penalty_treewidth_solver.h  solver.cpp  solver.h  tvm_hill_climb_solver.cpp  tvm_hill_climb_solver.h  xla_heap_solver.cpp  xla_heap_solver.h
src/dsa/analysis/: penalty_edge_derivation.cpp  penalty_edge_derivation.h  reuse_geometry.cpp  reuse_geometry.h
src/dsa/io/: minimalloc_csv.cpp  minimalloc_csv.h
src/dsa/model/: architecture.cpp  architecture.h  model.cpp  model.h  structured_json.cpp  structured_problem.cpp  structured_problem.h  validator.cpp  validator.h
tests/: dsa_bind_smoke.cmake  dsa_corpus_smoke.cmake  dsa_rp_corpus_smoke.cmake  dsa_rp_lift_smoke.cmake  dsa_standard_suite_smoke.cmake  dsa_tests.cpp  header_layout_smoke.cpp  minimalloc_dsa_rp_corpus_smoke.cmake  pypto_corpus_layout.cmake
tests/data/: chain_read_before_write_v1.json  corpus_targets.tsv  dsa_rp_phase_v1.json  dsa_rp_scale_v1.json  minimalloc_example_solution.csv  pypto_structured_v1.json  pypto_unbound_program_v1.json  recognized_cross_pipe_v1.json
tools/: capture_pypto_program.py  dsa_bench.cpp  dsa_bind.cpp  dsa_corpus.cpp  dsa_placement_study.cpp  dsa_rp_lift.cpp  dsa_suite.cpp  report_dsa_rp_results.py
(+1171 files in other folders)
